# tunerip

./: .gitignore  ADSTERRA_SETUP_GUIDE.md  AD_DEBUG_CHECKLIST.md  AD_DEPLOYMENT_SUMMARY.md  AD_IMPLEMENTATION_EXAMPLE.html  AD_IMPLEMENTATION_GUIDE.md  AD_TESTING_GUIDE.md  AD_ZONES_REFERENCE.md  BEFORE_AFTER_COMPARISON.md  COMPLETE_PROJECT_SUMMARY.md  CORS_FIX_GUIDE.md  CPANEL_DEPLOYMENT.md  CROSS_PROMOTION_STRATEGY.md  DEPLOYMENT_SUMMARY.md  DOWNLOADER_PAGES_COMPLETE.md  DOWNLOADER_PAGES_PLAN.md  HOMEPAGE_UI_IMPROVEMENTS.md  HOMEPAGE_WORD_COUNT_REPORT.md  INDEXING_GUIDE.md  MANUAL_VERIFICATION_CHECKLIST.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_100_CHECKLIST.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PLAYLIST_TESTING.md  README.md  SHORTS_FAQ_TRANSLATION_COMPLETE.md  SHORTS_TRANSLATION_STATUS.md  SITEMAP_FIX_GUIDE.md  SUPPORTER_BUTTON_INTERACTIVE.md  SUPPORTER_BUTTON_MOBILE_FIX.md  TRANSLATION_NOTE.md  TRANSLATION_PROGRESS.md  UI_IMPROVEMENTS_SUMMARY.md  UI_IMPROVEMENTS_SUMMARY_COMPLETE.md  VERCEL_CANONICAL_FIX.md  YOUTUBE_AUDIO_DOWNLOAD_MP3_FIXED.md  YOUTUBE_AUDIO_DOWNLOAD_MP3_IMPROVEMENTS.md  YOUTUBE_AUDIO_DOWNLOAD_MP3_REPORT.md  YOUTUBE_AUDIO_DOWNLOAD_MP3_SEO_PAGE.md  YOUTUBE_MP3_TRANSLATIONS_COMPLETE.md  (+17 more)
api/: .htaccess  Dockerfile  build.sh  deploy_cpanel.sh  keep_alive.sh  main.py  pyproject.toml  restart_api.sh  setup_vps.sh  stop_api.sh
public/: sitemap-vercel.xml  sitemap.xml
scripts/: COMPLETE_ALL_LANGUAGES.py  FINAL_COMPLETE_ALL.py  add_ads_to_all_pages.py  add_adsterra_to_all_pages.py  add_hreflang_all_pages.py  add_structured_data_all_pages.py  fix_build_js.py  (+43 more)
(+116 files in other folders)
