[project]
name = "ytconvert-api"
version = "0.1.0"
description = "YouTube conversion API backed by yt-dlp"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "yt-dlp>=2025.1.0",
    "python-multipart>=0.0.9",
    "imageio-ffmpeg>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
